syntax = "proto3";

package hotel;

message CheckRoomAvailabilityRequest {
  int64 hotel_id = 1;
  int64 room_id = 2;
}

message CheckRoomAvailabilityResponse{
  float price = 2;
}

message Room {
  int64 id = 1;
  string description = 2;
  int32 capacity = 3;
  double price_per_night = 4;
}

service HotelService {
  rpc RoomPrice(CheckRoomAvailabilityRequest) returns (CheckRoomAvailabilityResponse);
}